# vault-vcs

./: .gitignore  .vaultignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.vault/: config
.vault/oplog/: ops.jsonl
crates/vault-cli/: Cargo.toml
crates/vault-cli/src/: main.rs  tui.rs
crates/vault-cli/src/commands/: amend.rs  branch.rs  cp.rs  diff.rs  ignore.rs  init.rs  log.rs  merge.rs  mod.rs  oplog.rs  push.rs  remote.rs  resolve.rs  restore.rs  save.rs  show.rs  snapshot.rs  split.rs  squash.rs  stash.rs  status.rs  switch.rs  tags.rs  undo.rs
crates/vault-core/: Cargo.toml
crates/vault-core/src/: cherry.rs  dag.rs  diff.rs  error.rs  lib.rs  merge.rs  objects.rs  oplog.rs  remote.rs  repo.rs  snapshot.rs  stash.rs  store.rs
