[package]
name = "vault-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vault"
path = "src/main.rs"

[dependencies]
vault-core = {path = "../vault-core"}
clap = {version = "4.6.1", features = ["derive"]}
colored = "3.1.1"
anyhow = "1.0.103"
chrono = {version = "0.4.45", features =["serde"]}
crossterm = "0.29.0"
ratatui = "0.30.2"
uuid = {version = "1.23.4", features = ["v7"]}
