[package]
name = "vault-core"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.8.5"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0"
uuid = {version = "1.23.4", features = ["v7"]}
chrono = {version = "0.4.45", features =["serde"]}
walkdir = "2.5.0"
thiserror = "2.0.18"
crossterm = "0.29.0"
ratatui = "0.30.2"
